# SimpleSoftRenderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  interface.cpp  main.cpp
Appframe/: application.cpp  application.h  image.cpp  image.h  input.cpp  input.h  keycodes.h  layer.h  random.cpp  random.h  timer.h
Core/: camera.cpp  camera.h  geometry.h  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  scene.h  utils.hpp
Core/Rasterizer/: rasterizer.cpp  rasterizer.h  shader.h
Core/Tracer/: tracer.cpp  tracer.h
dependency/GLFW/: glfw3.lib
dependency/assimp/: assimp-vc143-mtd.lib
dependency/glad/: glad.h
dependency/imgui/: imgui_impl_opengl3_loader.h
src/: ArgParser.hpp  Config.h  FrameBuf.cpp  FrameBuf.h  GUI.cpp  GUI.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SurroundCamera.cpp  SurroundCamera.h  global.h  main.cpp
